# ChangeLog file for MonetDB5
# This file is updated with Maddlog

* Fri Aug 14 2015 Sjoerd Mullender <sjoerd@acm.org>
- Removed algebra.tunion.
